Update content about second DS project

--- a/about.html
+++ b/about.html
@@ -73,7 +73,20 @@
             experiences have honed my ability to communicate effectively with
             professionals from diverse backgrounds, complete projects
             efficiently, deliver excellent customer service, and adapt quickly
-            to new challenges.
+            to new challenges.<br /><br />And I'm excited to combine my
+            analytical aptitude with my passion for machine learning and
+            data-driven decision making. My goal is to continue growing as a
+            data scientist who can deliver tangible value to organizations
+            through predictive modeling and other data science techniques. On
+            this site, you'll find projects demonstrating my abilities across
+            the data science workflow - from exploratory data analysis,
+            visualization and feature engineering, to preprocessing and machine
+            learning model performance evaluation. <br /><br />Whether it's
+            improving customer retention, forecasting demand, detecting fraud,
+            or something else entirely, I love leveraging data to help companies
+            innovate. I'd be thrilled to discuss how we can work together to
+            drive insights and impact from artificial intelligence and advanced
+            analytics. Please feel free to reach out!
           </p>
         </div>
       </div>
@@ -88,15 +101,11 @@
           </li>
           <li>
             Python libraries: NumPy, Pandas, Matplotlib, Seaborn, Sklearn,
-            Statsmodels,
           </li>
+          <li>Proficient in Python, Jupyter Notebook, and Microsoft Excel,</li>
           <li>
-            Proficient in Python, Jupyter Notebook, JavaScript, and Microsoft
-            Excel, SQL,
-          </li>
-          <li>
-            Machine learning techniques for unsupervised learning and modeling
-            time series,
+            Machine learning for supervised and unsupervised learning, as
+            logistic regression and clustering techniques,
           </li>
           <li>Experience with product analytics</li>
           <li>Project management and coding best practices,</li>
@@ -132,8 +141,8 @@
       <div class="bio-paragraph">
         <ul>
           <li>
-            Applied Data Science program, by MIT Professional Education, online,
-            2022
+            Applied Data Science program, by MIT Professional Education in 2022
+            (16 CEUs awarded),
           </li>
           <li>Front-end development bootcamp, by shecodes.io, 2021</li>
         </ul>
