--- a/portfolio.html
+++ b/portfolio.html
@@ -70,11 +70,11 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-                <h2> <a href="project-forecasting.html">2. Forecasting Rent Growth in America's Most Walkable Cities: A Time Series Modeling approach</a></h2>
-              <p>What would be a nice, affordable city to live in in the near future? This is the data science project I am currently working on.</p>
+                <h2> <a href="project-predicting-flight-delay.html">2. Grounded or Going? Predicting Flight Delays with Logistic Regression</a></h2>
+              <p>This is the data science project I am currently working on.</p>
             </div>
             <div class="col-md-6 text">
-              <img src="media/forecasting_rent.jpg" class="img-fluid brushes" />
+              <img src="media/flight_delay.jpg" class="img-fluid brushes" />
             </div>
           </div>
         
