--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     </nav>
     <div class="main-wrap">
       <div class="presentation">
-        <h1>Welcome!</h1>
+        <h1>Hi there!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          aspiring data scientist, former corporate lawyer, and digital content creator. I am passionate about machine learning, and using data and technology together to drive business innovation.
+          an aspiring data scientist with experience as a corporate lawyer and digital content creator. I love using data to uncover insights and build machine learning models that drive business impact.
         </h2>
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
@@ -75,12 +75,12 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <img src="media/forecasting_rent.jpg" class="img-fluid brushes" />
+              <img src="media/flight_delay.jpg" class="img-fluid brushes" />
             </div>
             <div class="col-md-6 text">
               <h2> <a
-                  href="project-forecasting.html">Forecasting Rent Growth in America's Most Walkable Cities: A Time Series Modeling approach</a></h2>
-              <p>What would be a nice, affordable city to live in in the near future? This is the data science project I am currently working on.</p>
+                  href="project-predicting-flight-delay.html">Grounded or Going? Predicting Flight Delays with Logistic Regression</a></h2>
+              <p>This is the data science project I am currently working on.</p>
             </div>
           </div>
         
