Improve text on second project page

--- a/about.html
+++ b/about.html
@@ -74,19 +74,20 @@
             professionals from diverse backgrounds, complete projects
             efficiently, deliver excellent customer service, and adapt quickly
             to new challenges.<br /><br />And I'm excited to combine my
-            analytical aptitude with my passion for machine learning and
-            data-driven decision making. My goal is to continue growing as a
-            data scientist who can deliver tangible value to organizations
-            through predictive modeling and other data science techniques. On
-            this site, you'll find projects demonstrating my abilities across
-            the data science workflow - from exploratory data analysis,
-            visualization and feature engineering, to preprocessing and machine
-            learning model performance evaluation. <br /><br />Whether it's
-            improving customer retention, forecasting demand, detecting fraud,
-            or something else entirely, I love leveraging data to help companies
-            innovate. I'd be thrilled to discuss how we can work together to
-            drive insights and impact from artificial intelligence and advanced
-            analytics. Please feel free to reach out!
+            analytical skills with my passion for uncover insights using machine
+            learning, to enable data-driven decision making. My goal is to
+            continue growing as a data scientist who can deliver tangible value
+            to organizations through predictive modeling and other data science
+            techniques. On this site, you'll find projects demonstrating my
+            abilities across the data science workflow - from exploratory data
+            analysis, visualization and feature engineering, to preprocessing
+            and machine learning model performance evaluation.
+            <br /><br />Whether it's improving customer retention, forecasting
+            demand, detecting fraud, or something else entirely, I love
+            leveraging data to help companies innovate. I'd be thrilled to
+            discuss how we can work together to drive insights and impact from
+            artificial intelligence and advanced analytics. Please feel free to
+            reach out!
           </p>
         </div>
       </div>
@@ -97,7 +98,7 @@
         <ul>
           <li>
             Exploratory data analysis, data visualization, feature engineering
-            and data processing, statistical analysis,
+            and data preprocessing,
           </li>
           <li>
             Python libraries: NumPy, Pandas, Matplotlib, Seaborn, Sklearn,
