--- a/project-predicting-flight-delay.html
+++ b/project-predicting-flight-delay.html
@@ -61,8 +61,9 @@
           predict rent price trends in the most walkable cities in the U.S.
           However, when I was starting that project a friend mentioned an open
           dataset published by our regional airport. With a lifelong passion for
-          travel, I was immediately intrigued by the potential to analyze this
-          data.
+          travel, it was exciting enough for me to find out about it so I
+          decided to change the definition of my project to use this dataset
+          instead.
         </p>
       </div>
       <div class="row">
