--- a/about.html
+++ b/about.html
@@ -61,33 +61,25 @@
           </h2>
           <p>
             I'm embarking on a new journey in my professional life by pivoting
-            to a career in data science. My interest in programming languages
-            started in 2021, and the following year, I immersed myself in the
-            field of data science. I'm thrilled about the opportunity to utilize
-            machine learning techniques to grow, improve and innovate in various
-            industries. <br /><br />Previously, I spent four years as an
+            to a career in data. My interest in programming languages started in
+            2021, and the following year, I immersed myself in the field of data
+            science.<br /><br />Previously, I spent four years as an
             entrepreneur focused on content creation and digital marketing.
-            Prior to that, I worked for five years as a corporate lawyer for
+            Prior to that, I worked for four years as a corporate lawyer for
             Itaú bank in Chile, where I specialized in financial and banking
             products and regulations. <br /><br />These unconventional
             experiences have honed my ability to communicate effectively with
             professionals from diverse backgrounds, complete projects
             efficiently, deliver excellent customer service, and adapt quickly
-            to new challenges.<br /><br />And I'm excited to combine my
-            analytical skills with my passion for uncover insights using machine
-            learning, to enable data-driven decision making. My goal is to
-            continue growing as a data scientist who can deliver tangible value
-            to organizations through predictive modeling and other data science
-            techniques. On this site, you'll find projects demonstrating my
-            abilities across the data science workflow - from exploratory data
-            analysis, visualization and feature engineering, to preprocessing
-            and machine learning model performance evaluation.
-            <br /><br />Whether it's improving customer retention, forecasting
-            demand, detecting fraud, or something else entirely, I love
-            leveraging data to help companies innovate. I'd be thrilled to
-            discuss how we can work together to drive insights and impact from
-            artificial intelligence and advanced analytics. Please feel free to
-            reach out!
+            to new challenges. Also I am very good with people, fostering teams
+            and building bridges.<br /><br />On this site, you'll find projects
+            demonstrating my abilities across the data science workflow - from
+            exploratory data analysis, visualization, and feature engineering,
+            to preprocessing and machine-learning model performance evaluation.
+            I love leveraging data to help businesses innovate, so I'd be
+            thrilled to discuss how we can collaborate to drive insights and
+            impact from advanced analytics. <br /><br />
+            Please feel free to reach out!
           </p>
         </div>
       </div>
