--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <h1>Hi there!</h1>
         <h1>I am Francisca Jara</h1>
         <h2>
-          an aspiring data scientist with experience as a corporate lawyer and digital content creator. I love using data to uncover insights and build machine learning models that drive business impact.
-        </h2>
+          an aspiring data scientist with experience as a corporate lawyer and digital content creator.
         <br />
         <p class="learn-more"><a href="about.html">Learn more about me ✸</a></p>
       </div>
